--- a/index.html
+++ b/index.html
@@ -1,290 +1,176 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>SeeBee – Meliponicultura</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#0b1220" />
+  <title>SeeBee – Rastreador de ninhos</title>
 
-  <link rel="manifest" href="./manifest.webmanifest" />
-  <link rel="stylesheet" href="./css/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#14532d" />
+
+  <!-- PWA -->
+  <link rel="manifest" href="manifest.webmanifest" />
 
   <!-- Leaflet -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""
+  />
+  <script
+    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin=""
+  ></script>
 
-  <!-- Supabase JS (CDN) -->
+  <!-- Supabase -->
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+
+  <!-- App CSS -->
+  <link rel="stylesheet" href="./css/main.css" />
 </head>
-
 <body>
-  <!-- TOPBAR (aparece só logado) -->
-  <header id="topbar" class="topbar hidden">
-    <div class="brand">
-      <div class="brandIcon">🐝</div>
-      <div class="brandText">
-        <div class="brandTitle">SeeBee</div>
-        <div class="brandSub">Meliponicultura</div>
-      </div>
-    </div>
 
-    <div class="topbarRight">
-      <div id="onlinePill" class="pill hidden" title="Status de conexão">
-        <span id="onlineDot" class="dot"></span>
-        <span id="onlineText">Online</span>
-      </div>
-
-      <button id="btnMenu" class="iconBtn" aria-label="Menu">☰</button>
+<!-- ============ TELA DE AUTENTICAÇÃO ============ -->
+<div id="auth-screen">
+  <header class="auth-header">
+    <div class="brand-hero">
+      <div class="brand-logo" aria-hidden="true">🐝</div>
+      <div class="brand-name">SeeBee</div>
     </div>
   </header>
 
-  <!-- DRAWER MENU -->
-  <aside id="drawer" class="drawer hidden" aria-hidden="true">
-    <div class="drawerHeader">
-      <div class="drawerUser">
-        <div class="avatar" id="drawerAvatar">👤</div>
-        <div class="drawerUserText">
-          <div id="drawerEmail" class="drawerEmail">—</div>
-          <div class="drawerSmall">Conta ativa</div>
-        </div>
-      </div>
-      <button id="btnCloseDrawer" class="iconBtn" aria-label="Fechar">✕</button>
+  <div id="auth-card">
+    <h2>Entrar ou criar conta</h2>
+    <p>Use e-mail e senha ou conecte com Google.</p>
+
+    <div class="auth-field">
+      <label for="auth-email">E-mail</label>
+      <input id="auth-email" type="email" autocomplete="email" />
     </div>
 
-    <nav class="drawerNav">
-      <button class="drawerItem" data-nav="home">🏕️ Registrar</button>
-      <button class="drawerItem" data-nav="trails">🧭 Minhas Trilhas</button>
-      <button class="drawerItem" data-nav="nests">📍 Meus ninhos</button>
-      <button class="drawerItem" data-nav="profile">👤 Meus dados</button>
-    </nav>
-
-    <div class="drawerFooter">
-      <button id="btnLogout" class="btn danger">Sair</button>
+    <div class="auth-field">
+      <label for="auth-password">Senha</label>
+      <input id="auth-password" type="password" autocomplete="current-password" />
     </div>
-  </aside>
 
-  <div id="backdrop" class="backdrop hidden"></div>
+    <div class="auth-buttons">
+      <button class="btn-primary" id="btn-signin">Entrar</button>
+      <button class="btn-outline" id="btn-signup">Criar conta</button>
+    </div>
 
-  <!-- AUTH SCREEN -->
-  <main id="authScreen" class="authScreen">
-    <section class="card authCard">
-      <div class="authBrand">
-        <div class="authBee">🐝</div>
-        <div class="authTitle">SeeBee</div>
-        <div class="authSub">Meliponicultura</div>
+    <button class="btn-google" id="btn-google">
+      <span class="btn-google-icon"></span>
+      <span>Entrar com Google</span>
+    </button>
+
+    <div id="auth-msg" class="auth-msg"></div>
+  </div>
+</div>
+
+<!-- ============ TELA DO APP ============ -->
+<div id="app-screen" class="hidden">
+  <header class="app-header">
+    <div class="title-block">
+      <h1>Rastreador de ninhos</h1>
+      <p class="subtle">Registre trajetos e marque ninhos.</p>
+    </div>
+
+    <div class="header-right">
+      <div class="status-pill" id="status-pill">
+        <span class="status-dot"></span>
+        <span id="cloud-status">Trabalhando online</span>
       </div>
 
-      <h2 class="h2">Entrar</h2>
-      <p class="muted">Use seu e-mail e senha (Supabase Auth) ou Google.</p>
+      <div class="brand-mini">
+        <div class="brand-mini-logo" aria-hidden="true">🐝</div>
+        <div class="brand-mini-name">SeeBee</div>
+      </div>
 
-      <div class="form">
-        <label>E-mail</label>
-        <input id="authEmail" type="email" placeholder="seuemail@..." autocomplete="email" />
+      <div class="user-info">
+        <span class="user-email" id="user-email-label"></span>
+        <button class="btn-ghost" id="btn-logout">Sair</button>
+      </div>
+    </div>
+  </header>
 
-        <label>Senha</label>
-        <input id="authPass" type="password" placeholder="••••••••" autocomplete="current-password" />
+  <div class="app-grid">
+    <section class="card">
+      <h3>Trajeto em andamento <span class="badge" id="badge-status">Parado</span></h3>
+      <p class="card-subtitle">
+        Inicie o trajeto e marque ninhos com observação e foto.
+      </p>
 
-        <div class="row">
-          <button id="btnLogin" class="btn primary">Entrar</button>
-          <button id="btnSignup" class="btn">Criar conta</button>
+      <div class="controls-grid">
+        <button class="btn-lg btn-start" id="btn-toggle-route">
+          <span id="btn-toggle-icon">▶</span>
+          <span id="btn-toggle-text">Iniciar trajeto</span>
+        </button>
+
+        <button class="btn-lg btn-secondary" id="btn-add-nest" disabled>
+          🐝 Marcar ninho
+        </button>
+      </div>
+
+      <div class="info-row">
+        <span class="info-pill" id="info-route-name">Trajeto: —</span>
+        <span class="info-pill" id="info-distance">Distância: 0 m</span>
+        <span class="info-pill" id="info-nests">Ninhos: 0</span>
+        <span class="info-pill" id="info-gps">GPS: aguardando...</span>
+      </div>
+    </section>
+
+    <section class="card">
+      <div class="map-head">
+        <div>
+          <h3>Mapa</h3>
+          <p class="card-subtitle">O mapa acompanha seu caminho e mostra os ninhos.</p>
         </div>
-
-        <div class="divider"></div>
-
-        <button id="btnGoogle" class="btn google">Entrar com Google</button>
-
-        <div id="authMsg" class="msg hidden"></div>
       </div>
+      <div id="map"></div>
     </section>
-  </main>
+  </div>
 
-  <!-- APP SCREEN -->
-  <main id="appScreen" class="appScreen hidden">
-    <!-- HOME: Registrar -->
-    <section id="screenHome" class="screen">
-      <div class="grid">
-        <section class="card">
-          <h2 class="h2">Trilha</h2>
-          <p class="muted">Inicie a trilha e depois marque ninhos com observação e foto.</p>
+  <section class="routes-section">
+    <div class="routes-header">
+      <h3>Trajetos salvos</h3>
+      <button class="btn-xs" id="btn-refresh">Atualizar</button>
+    </div>
+    <div id="routes-list"></div>
+  </section>
+</div>
 
-          <div class="row">
-            <button id="btnStartRoute" class="btn primary">Iniciar trilha</button>
-            <button id="btnFinishRoute" class="btn" disabled>Finalizar trilha</button>
-          </div>
+<div id="photo-modal">
+  <button id="photo-modal-close">Fechar</button>
+  <img id="photo-modal-img" src="" alt="Foto do ninho" />
+</div>
 
-          <div class="stats">
-            <div class="stat">
-              <div class="statLabel">Distância</div>
-              <div id="distanceText" class="statValue">0 m</div>
-            </div>
-            <div class="stat">
-              <div class="statLabel">Ninhos nesta trilha</div>
-              <div id="nestsCountText" class="statValue">0</div>
-            </div>
-          </div>
+<div id="nest-modal" class="modal-backdrop">
+  <div class="modal-card">
+    <h4>Marcar ninho</h4>
+    <p>Adicione observação e (opcional) uma foto.</p>
 
-          <div id="routeHint" class="hint hidden"></div>
-        </section>
+    <div class="modal-field">
+      <label for="nest-notes">Observações (opcional)</label>
+      <textarea id="nest-notes" placeholder="Ex.: árvore grande perto da rua 14..."></textarea>
+    </div>
 
-        <section class="card">
-          <h2 class="h2">Marcar ninho</h2>
+    <div class="modal-field">
+      <label>Foto do ninho (opcional)</label>
+      <label class="modal-file-label">
+        📷 <span>Selecionar ou tirar foto</span>
+        <input id="nest-file-input" type="file" accept="image/*" capture="environment" />
+      </label>
+      <span id="nest-file-name" class="modal-file-name"></span>
+    </div>
 
-          <label>Observação</label>
-          <input id="nestNote" type="text" placeholder="Ex.: entrada ativa, árvore X, sombra, sinais..." />
+    <div class="modal-actions">
+      <button class="btn-sm" id="nest-cancel">Cancelar</button>
+      <button class="btn-sm btn-sm-primary" id="nest-save">Salvar ninho</button>
+    </div>
+  </div>
+</div>
 
-          <label>Status</label>
-          <select id="nestStatus">
-            <option value="CATALOGADO">CATALOGADO</option>
-            <option value="CAPTURADO">CAPTURADO</option>
-          </select>
-
-          <label>Espécie (opcional)</label>
-          <input id="nestSpecies" type="text" placeholder="Ex.: Jataí, Uruçu, Mandaçaia... ou Não identifiquei" />
-
-          <label>Foto (opcional)</label>
-          <input id="nestPhoto" type="file" accept="image/*" />
-
-          <button id="btnMarkNest" class="btn primary">Marcar ninho</button>
-
-          <div id="nestMsg" class="msg hidden"></div>
-        </section>
-      </div>
-
-      <section class="card">
-        <h2 class="h2">Registros desta trilha</h2>
-        <p class="muted">Os ninhos marcados aparecem aqui para conferência rápida.</p>
-        <div id="nestList" class="nestList"></div>
-      </section>
-
-      <section class="card mapCard">
-        <div id="map" class="map"></div>
-        <div class="muted small">O trajeto e os ninhos serão desenhados no mapa em tempo real.</div>
-      </section>
-    </section>
-
-    <!-- Trails -->
-    <section id="screenTrails" class="screen hidden">
-      <section class="card">
-        <h2 class="h2">Minhas Trilhas</h2>
-        <div id="trailsEmpty" class="empty hidden">Nenhuma trilha salva.</div>
-        <div id="trailsList" class="list"></div>
-      </section>
-    </section>
-
-    <!-- Nests -->
-    <section id="screenNests" class="screen hidden">
-      <section class="card">
-        <h2 class="h2">Meus ninhos</h2>
-        <div id="nestsEmpty" class="empty hidden">Nenhum ninho catalogado.</div>
-        <div id="allNestsList" class="list"></div>
-      </section>
-    </section>
-
-    <!-- Profile -->
-    <section id="screenProfile" class="screen hidden">
-      <section class="card">
-        <h2 class="h2">Meus dados</h2>
-
-        <div class="grid2">
-          <div>
-            <label>Nome completo</label>
-            <input id="p_full_name" type="text" placeholder="Seu nome" />
-          </div>
-          <div>
-            <label>E-mail</label>
-            <input id="p_email" type="email" placeholder="email@..." disabled />
-          </div>
-
-          <div>
-            <label>WhatsApp</label>
-            <input id="p_whatsapp" type="text" placeholder="(xx) xxxxx-xxxx" />
-          </div>
-
-          <div>
-            <label>Você é</label>
-            <select id="p_role_type">
-              <option value="">Selecione...</option>
-              <option value="entusiasta">Entusiasta</option>
-              <option value="estudante">Estudante</option>
-              <option value="meliponicultor">Meliponicultor</option>
-              <option value="pesquisador">Pesquisador</option>
-            </select>
-          </div>
-
-          <div>
-            <label>Documento</label>
-            <select id="p_doc_type">
-              <option value="CPF">CPF</option>
-              <option value="CNPJ">CNPJ</option>
-            </select>
-          </div>
-          <div>
-            <label>Nº do documento</label>
-            <input id="p_doc_value" type="text" placeholder="CPF/CNPJ" />
-          </div>
-
-          <div class="colspan2">
-            <h3 class="h3">Endereço</h3>
-          </div>
-
-          <div>
-            <label>Rua</label>
-            <input id="p_address_street" type="text" />
-          </div>
-          <div>
-            <label>Cidade</label>
-            <input id="p_address_city" type="text" />
-          </div>
-          <div>
-            <label>Estado</label>
-            <input id="p_address_state" type="text" />
-          </div>
-          <div>
-            <label>CEP</label>
-            <input id="p_address_zip" type="text" />
-          </div>
-
-          <div class="colspan2">
-            <h3 class="h3">Meliponário (se aplicável)</h3>
-            <p class="muted">Se você for meliponicultor e usar CNPJ, pode cadastrar aqui.</p>
-          </div>
-
-          <div>
-            <label>Nome do meliponário</label>
-            <input id="p_meliponary_name" type="text" placeholder="Ex.: Meliponário do João" />
-          </div>
-
-          <div class="row alignCenter">
-            <input id="p_meliponary_has_own_address" type="checkbox" />
-            <span class="muted">Meliponário tem endereço diferente do usuário</span>
-          </div>
-
-          <div>
-            <label>Rua (meliponário)</label>
-            <input id="p_meliponary_address_street" type="text" />
-          </div>
-          <div>
-            <label>Cidade (meliponário)</label>
-            <input id="p_meliponary_address_city" type="text" />
-          </div>
-          <div>
-            <label>Estado (meliponário)</label>
-            <input id="p_meliponary_address_state" type="text" />
-          </div>
-          <div>
-            <label>CEP (meliponário)</label>
-            <input id="p_meliponary_address_zip" type="text" />
-          </div>
-
-          <div class="colspan2">
-            <button id="btnSaveProfile" class="btn primary">Salvar meus dados</button>
-            <div id="profileMsg" class="msg hidden"></div>
-          </div>
-        </div>
-      </section>
-    </section>
-  </main>
-
-  <script type="module" src="./src/main.js"></script>
+<script type="module" src="./js/app.js"></script>
 </body>
 </html>
