--- a/index.html
+++ b/index.html
@@ -2,175 +2,143 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>SeeBee – Rastreador de ninhos</title>
-
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#14532d" />
-
-  <!-- PWA -->
+  <title>SeeBee – Meliponicultura</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="theme-color" content="#020617" />
   <link rel="manifest" href="manifest.webmanifest" />
-
-  <!-- Leaflet -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-    crossorigin=""
-  />
-  <script
-    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-    crossorigin=""
-  ></script>
-
-  <!-- Supabase -->
+  
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-
-  <!-- App CSS -->
+  
   <link rel="stylesheet" href="./css/main.css" />
+  <style>
+    /* Estilo Extra para os Submenus (Segmented Control) */
+    .segmented-control {
+      display: flex; background: #1e293b; padding: 4px; border-radius: 8px; margin-bottom: 16px;
+    }
+    .segment-btn {
+      flex: 1; padding: 8px; border: none; background: transparent; color: #94a3b8;
+      font-size: 0.85rem; border-radius: 6px; cursor: pointer; transition: all 0.2s;
+    }
+    .segment-btn.active { background: #0f172a; color: #fff; font-weight: 600; shadow: 0 1px 3px rgba(0,0,0,0.2); }
+    
+    .status-alert { color: #facc15; font-size: 0.8rem; margin-top: 4px; display: block; }
+    .status-ok { color: #4ade80; font-size: 0.8rem; }
+  </style>
 </head>
 <body>
 
-<!-- ============ TELA DE AUTENTICAÇÃO ============ -->
-<div id="auth-screen">
-  <header class="auth-header">
-    <div class="brand-hero">
-      <div class="brand-logo" aria-hidden="true">🐝</div>
-      <div class="brand-name">SeeBee</div>
+  <div id="auth-screen">
+    <div class="brand-hero"><div class="brand-logo">🐝</div><div class="brand-name">SeeBee</div></div>
+    <div id="auth-card">
+      <h2>Entrar</h2>
+      <div class="auth-field"><label>E-mail</label><input id="email" type="email" /></div>
+      <div class="auth-field"><label>Senha</label><input id="password" type="password" /></div>
+      <div class="auth-buttons">
+        <button id="btnLogin" class="btn-primary">Entrar</button>
+        <button id="btnSignup" class="btn-outline">Criar Conta</button>
+      </div>
+      <button id="btnGoogle" class="btn-google">Entrar com Google</button>
+      <div id="authMsg" class="auth-msg"></div>
     </div>
-  </header>
-
-  <div id="auth-card">
-    <h2>Entrar ou criar conta</h2>
-    <p>Use e-mail e senha ou conecte com Google.</p>
-
-    <div class="auth-field">
-      <label for="auth-email">E-mail</label>
-      <input id="auth-email" type="email" autocomplete="email" />
-    </div>
-
-    <div class="auth-field">
-      <label for="auth-password">Senha</label>
-      <input id="auth-password" type="password" autocomplete="current-password" />
-    </div>
-
-    <div class="auth-buttons">
-      <button class="btn-primary" id="btn-signin">Entrar</button>
-      <button class="btn-outline" id="btn-signup">Criar conta</button>
-    </div>
-
-    <button class="btn-google" id="btn-google">
-      <span class="btn-google-icon"></span>
-      <span>Entrar com Google</span>
-    </button>
-
-    <div id="auth-msg" class="auth-msg"></div>
   </div>
-</div>
 
-<!-- ============ TELA DO APP ============ -->
-<div id="app-screen" class="hidden">
-  <header class="app-header">
-    <div class="title-block">
-      <h1>Rastreador de ninhos</h1>
-      <p class="subtle">Registre trajetos e marque ninhos.</p>
-    </div>
+  <div id="app-screen" class="hidden">
+    <header class="app-header">
+      <div class="brand-mini">🐝 SeeBee</div>
+      <div class="status-pill"><span id="onlineDot" class="status-dot"></span><span id="onlineText">Online</span></div>
+    </header>
 
-    <div class="header-right">
-      <div class="status-pill" id="status-pill">
-        <span class="status-dot"></span>
-        <span id="cloud-status">Trabalhando online</span>
-      </div>
-
-      <div class="brand-mini">
-        <div class="brand-mini-logo" aria-hidden="true">🐝</div>
-        <div class="brand-mini-name">SeeBee</div>
-      </div>
-
-      <div class="user-info">
-        <span class="user-email" id="user-email-label"></span>
-        <button class="btn-ghost" id="btn-logout">Sair</button>
-      </div>
-    </div>
-  </header>
-
-  <div class="app-grid">
-    <section class="card">
-      <h3>Trajeto em andamento <span class="badge" id="badge-status">Parado</span></h3>
-      <p class="card-subtitle">
-        Inicie o trajeto e marque ninhos com observação e foto.
-      </p>
-
-      <div class="controls-grid">
-        <button class="btn-lg btn-start" id="btn-toggle-route">
-          <span id="btn-toggle-icon">▶</span>
-          <span id="btn-toggle-text">Iniciar trajeto</span>
-        </button>
-
-        <button class="btn-lg btn-secondary" id="btn-add-nest" disabled>
-          🐝 Marcar ninho
-        </button>
-      </div>
-
-      <div class="info-row">
-        <span class="info-pill" id="info-route-name">Trajeto: —</span>
-        <span class="info-pill" id="info-distance">Distância: 0 m</span>
-        <span class="info-pill" id="info-nests">Ninhos: 0</span>
-        <span class="info-pill" id="info-gps">GPS: aguardando...</span>
-      </div>
+    <section id="view-meliponaries" class="view-section active">
+      <div class="section-title"><h2>Meliponários</h2><button class="btn-xs">Novo</button></div>
+      <div id="colonies-list" class="list-vertical">Carregando...</div>
     </section>
 
-    <section class="card">
-      <div class="map-head">
-        <div>
-          <h3>Mapa</h3>
-          <p class="card-subtitle">O mapa acompanha seu caminho e mostra os ninhos.</p>
+    <section id="view-traps" class="view-section hidden">
+      <div class="segmented-control">
+        <button class="segment-btn active" data-sub="sub-deposit">Depositar</button>
+        <button class="segment-btn" data-sub="sub-trails">Minhas Trilhas</button>
+        <button class="segment-btn" data-sub="sub-captured">Capturados</button>
+      </div>
+
+      <div id="sub-deposit" class="sub-view">
+        <div class="card map-controls">
+          <div class="controls-header">
+            <div><h3>Gravar Trilha</h3><div class="stats-row"><span id="distanceText">0 m</span> • <span id="nestsCountText">0</span> iscas</div></div>
+            <button id="btnStartRoute" class="btn-start">▶ Iniciar</button>
+            <button id="btnFinishRoute" class="btn-stop hidden">■ Parar</button>
+          </div>
+          <div id="routeHint" class="hint-box hidden"></div>
+        </div>
+        <div id="map-container">
+          <div id="map"></div>
+          <button id="btnMarkNest" class="fab-map" disabled>+ 🐝</button>
         </div>
       </div>
-      <div id="map"></div>
+
+      <div id="sub-trails" class="sub-view hidden">
+        <h3>Histórico de Campo</h3>
+        <p class="subtle">Reveja trilhas e faça manutenção nas iscas.</p>
+        <div id="trailsList"></div>
+        <div id="trailsEmpty" class="route-empty hidden">Nenhuma trilha gravada.</div>
+      </div>
+
+      <div id="sub-captured" class="sub-view hidden">
+        <h3>Iscas Capturadas</h3>
+        <p class="subtle">Monitore o prazo de 35 dias para transferência.</p>
+        <div id="capturedList"></div>
+        <div id="capturedEmpty" class="route-empty hidden">Nenhuma captura recente.</div>
+      </div>
     </section>
+
+    <section id="view-natural" class="view-section hidden">
+      <div class="section-title"><h2>Ninhos na Mata</h2></div>
+      <div class="card">
+        <p>Registro de ocorrências naturais (sem isca).</p>
+        <button class="btn-secondary full-width" onclick="alert('Use a aba Depositar para iscas ou implemente o registro avulso aqui.')">📷 Registrar Foto</button>
+      </div>
+      <div id="allNestsList"></div>
+    </section>
+
+    <section id="view-profile" class="view-section hidden">
+      <div class="card profile-card">
+        <div class="avatar-circle">👤</div>
+        <h3 id="p_email">...</h3>
+        <button id="btnLogout" class="btn-outline btn-sm">Sair</button>
+      </div>
+    </section>
+
+    <nav class="bottom-nav">
+      <button class="nav-item active" data-target="view-meliponaries"><span>Caixas</span></button>
+      <button class="nav-item" data-target="view-traps"><span>Iscas</span></button>
+      <button class="nav-item" data-target="view-natural"><span>Mata</span></button>
+      <button class="nav-item" data-target="view-profile"><span>Perfil</span></button>
+    </nav>
   </div>
 
-  <section class="routes-section">
-    <div class="routes-header">
-      <h3>Trajetos salvos</h3>
-      <button class="btn-xs" id="btn-refresh">Atualizar</button>
-    </div>
-    <div id="routes-list"></div>
-  </section>
-</div>
-
-<div id="photo-modal">
-  <button id="photo-modal-close">Fechar</button>
-  <img id="photo-modal-img" src="" alt="Foto do ninho" />
-</div>
-
-<div id="nest-modal" class="modal-backdrop">
-  <div class="modal-card">
-    <h4>Marcar ninho</h4>
-    <p>Adicione observação e (opcional) uma foto.</p>
-
-    <div class="modal-field">
-      <label for="nest-notes">Observações (opcional)</label>
-      <textarea id="nest-notes" placeholder="Ex.: árvore grande perto da rua 14..."></textarea>
-    </div>
-
-    <div class="modal-field">
-      <label>Foto do ninho (opcional)</label>
-      <label class="modal-file-label">
-        📷 <span>Selecionar ou tirar foto</span>
-        <input id="nest-file-input" type="file" accept="image/*" capture="environment" />
-      </label>
-      <span id="nest-file-name" class="modal-file-name"></span>
-    </div>
-
-    <div class="modal-actions">
-      <button class="btn-sm" id="nest-cancel">Cancelar</button>
-      <button class="btn-sm btn-sm-primary" id="nest-save">Salvar ninho</button>
+  <div id="nest-modal" class="modal-backdrop">
+    <div class="modal-card">
+      <h4>Dados da Isca/Ninho</h4>
+      <div class="modal-field"><label>Espécie</label><input id="nestSpecies" type="text" placeholder="Ex: Jataí" /></div>
+      <div class="modal-field">
+        <label>Status</label>
+        <select id="nestStatus">
+          <option value="DEPOSITADO">Depositado (Padrão)</option>
+          <option value="SUBSTITUIDO">Substituído (Manutenção)</option>
+          <option value="CAPTURADO">Capturado (Sucesso)</option>
+          <option value="EXCLUIR">Excluir (Remover)</option>
+        </select>
+      </div>
+      <div class="modal-field"><label>Observação</label><textarea id="nestNote"></textarea></div>
+      <div class="modal-field"><label class="modal-file-label">📷 Foto <input id="nestPhoto" type="file" accept="image/*" capture="environment" /></label></div>
+      <div class="modal-actions">
+        <button id="nestCancel" class="btn-sm">Cancelar</button>
+        <button id="btnConfirmNest" class="btn-sm btn-sm-primary">Salvar</button>
+      </div>
     </div>
   </div>
-</div>
 
-<script type="module" src="./js/app.js"></script>
+  <script type="module" src="./js/main.js"></script>
 </body>
 </html>
